--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "jsfuckit",
   "version": "1.0.0",
   "description": "An npx tool to compile Javascript to JSFuck with no regard for optimization.",
-  "main": "index.js",
+  "main": "bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "TheWeirdSquid",
-  "license": "ISC"
+  "license": "ISC",
+  "bin": {
+    "jsfuckit": "bin/index.js"
+  }
 }
